2013-08-20  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* string/strcoll_l.c (coll_seq): New structure.
	(get_next_seq_cached): New function.
	(get_next_seq): New function.
	(do_compare): New function.
	(STRCOLL): Use GNU style definition.  Simplify implementation
	by using get_next_seq, get_next_seq_cached and do_compare.

2013-10-31  Andreas Schwab  <schwab@suse.de>

	[BZ# 15917]
	* stdio-common/vfscanf.c (_IO_vfwscanf): Handle leading '0' not
	followed by 'x' as part of digit sequence.
	* stdio-common/tst-sscanf.c (double_tests2): New tests.

2013-10-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/strcpy.S (strcpy): Add word load/store
	to provide a boost for large inputs with word alignment.
	* sysdeps/powerpc/powerpc64/stpcpy.S (__stpcpy): Rewrite
	implementation based on optimized PPC64 strcpy.
	* sysdeps/powerpc/powerpc64/power7/strcpy.S: New file: optimized
	strcpy for PPC64/POWER7 based on both doubleword and word load/store.
	* sysdeps/powerpc/powerpc64/power7/stpcpy.S: New file: optimized
	stpcpy for PPC64/POWER7 based on PPC64/POWER7 strcpy.

2013-10-25  Siddhesh Poyarekar  <siddhesh@redhat.com>

<<<<<<< HEAD
	* sysdeps/ieee754/ldbl-128ibm/e_acosl.c (__ieee754_acosl): Check
	for NaNs before doing comparisons on argument.
	* sysdeps/ieee754/ldbl-128ibm/e_asinl.c (__ieee754_asinl):
	Likewise.

2013-10-04  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc32/dl-machine.c (__process_machine_rela):
	Use stdint types in rather than __attribute__((mode())).
	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_rela): Likewise.

2013-10-04  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc32/dl-machine.c (__process_machine_rela):
	Correct handling of unaligned relocs for little-endian.
	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_rela): Likewise.

2013-10-04  Alan Modra  <amodra@gmail.com>

	* configure.in: Map powerpc64le and powerpcle to base_machine/machine.
	* configure: Regenerate.